# bazel-repros

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
cache/: foo.proto
foo/: BUILD.bazel  main.go
main/: BUILD.bazel
proto/: BUILD.bazel
