load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "foo_lib",
    srcs = ["main.go"],
    importpath = "github.com/cirruslabs/backbone-services/foo",
    visibility = ["//visibility:private"],
    deps = [
        "//cache:foo",
        "@org_golang_google_protobuf//encoding/protojson",
    ],
)

go_binary(
    name = "foo",
    embed = [":foo_lib"],
    visibility = ["//visibility:public"],
)
