load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "main_lib",
    srcs = ["main.go"],
    importpath = "github.com/cirruslabs/backbone-services/main",
    visibility = ["//visibility:private"],
    deps = [
        "//proto:foo",
        "@org_golang_google_protobuf//encoding/protojson",
    ],
)

go_binary(
    name = "main",
    embed = [":main_lib"],
    visibility = ["//visibility:public"],
)
